--- a/taskmanager/templates/categories.html
+++ b/taskmanager/templates/categories.html
@@ -18,7 +18,7 @@
             <div class="card-content white-text">
                 <span class="card-title">{{ category.category_name }}</span>
                 <div class="card-action">
-                    <a href="#" class="btn green accent-4">Edit</a>
+                    <a href="{{ url_for('edit_category', category_id=category.id) }}" class="btn green accent-4">Edit</a>
                     <a href="#" class="btn red">Delete</a>
                 </div>
             </div>
